chore: spacing fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 html {
   scroll-behavior: smooth;
+  min-height: 500px;
 }
 
 body {
@@ -20,13 +21,6 @@ main {
 
 h1 {
   letter-spacing: 15px;
-}
-
-.bumps-nav-2 {
-  max-width: 500px;
-  display: flex;
-  justify-content: space-around;
-  padding: 0 2rem;
 }
 
 .disabled-link {
@@ -95,8 +89,11 @@ h1 {
   line-height: 32px;
 }
 
-nav {
-  max-width: 700px;
+.bumps-nav-2 {
+  max-width: 600px;
+  display: flex;
+  justify-content: space-around;
+  padding: 0 2rem;
   margin: 0 auto;
 }
 
@@ -110,6 +107,10 @@ nav a:hover {
   text-decoration: underline;
 }
 
+.body-link {
+  text-decoration: underline;
+}
+
 .bumps-main-header {
   background-image: url("../public/bumps-hero-photo-bg.webp");
   background-color: #17201ca3;
@@ -117,7 +118,8 @@ nav a:hover {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
-  min-height: calc(100vh);
+  height: 100vh;
+  min-height: 500px;
   color: #fff;
   display: grid;
 }
